force-app/main/default/objects/Quote/fields/ComissaoConformeTabela__c.field-meta.xml
<CustomField>
    <fullName>ComissaoConformeTabela__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comissão Conforme Tabela</label>
    <type>Checkbox</type>
</CustomField>