force-app/main/default/objects/Quote/fields/DescontoConformeTabela__c.field-meta.xml
<CustomField>
    <fullName>DescontoConformeTabela__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desconto Conforme Tabela</label>
    <type>Checkbox</type>
</CustomField>