force-app/main/default/objects/Quote/fields/LinkOportunidade__c.field-meta.xml
<CustomField>
    <fullName>LinkOportunidade__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND(&quot;/services&quot;, $Api.Partner_Server_URL_260) - 1) &amp; &quot;/&quot; &amp; OpportunityId , &quot;Abrir Registro&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link Oportunidade</label>
    <type>Text</type>
</CustomField>