force-app/main/default/objects/Quote/fields/NomeCotacao__c.field-meta.xml
<CustomField>
    <fullName>NomeCotacao__c</fullName>
    <description>Geração de nome automático para cotação</description>
    <displayFormat>P-{00000}</displayFormat>
    <label>Nome Cotação</label>
    <type>AutoNumber</type>
</CustomField>