force-app/main/default/objects/Quote/fields/NomeProprietarioOportunidade__c.field-meta.xml
<CustomField>
    <fullName>NomeProprietarioOportunidade__c</fullName>
    <formula>Opportunity.Owner.FirstName &amp; &quot; &quot; &amp; Opportunity.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Proprietário da Oportunidade</label>
    <type>Text</type>
</CustomField>