force-app/main/default/objects/Quote/fields/PrecoLista__c.field-meta.xml
<CustomField>
    <fullName>PrecoLista__c</fullName>
    <label>Preço de Lista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>